--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -54,7 +54,8 @@ body {
   transition: all 0.4s ease;
 }
 
-.form-content h3 {
+.form-content h3,
+h4 {
   color: #fff;
   text-align: left;
   font-size: 28px;
@@ -62,7 +63,8 @@ body {
   margin-bottom: 5px;
 }
 
-.form-content h3.form-title {
+.form-content h3,
+h4.form-title {
   margin-bottom: 30px;
 }
 
@@ -155,11 +157,12 @@ body {
   color: #2acc80;
 }
 
-#output{
+#output {
   letter-spacing: 2px;
   font-weight: 600;
 }
 
-.form-items h3 {
+.form-items h3,
+h4 {
   letter-spacing: 2px;
 }
